--- a/src/mavsdk_server/src/CMakeLists.txt
+++ b/src/mavsdk_server/src/CMakeLists.txt
@@ -52,7 +52,7 @@ foreach(plugin ${COMPONENTS_LIST})
 endforeach()
 
 set_target_properties(mavsdk_server
-    PROPERTIES
+    PROPERTIES COMPILE_FLAGS ${warnings}
     VERSION ${MAVSDK_VERSION_STRING}
     SOVERSION ${MAVSDK_SOVERSION_STRING}
     )
