--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -26,8 +26,7 @@ target_include_directories(system_tests_runner
     ${PROJECT_SOURCE_DIR}/mavsdk/core
 )
 
-hunter_add_package(gtest)
-find_package(GTest REQUIRED)
+find_package(GTest)
 
 target_link_libraries(system_tests_runner
     PRIVATE
@@ -35,6 +34,10 @@ target_link_libraries(system_tests_runner
     GTest::gtest
     GTest::gtest_main
     GTest::gmock
+)
+
+set_target_properties(system_tests_runner
+    PROPERTIES COMPILE_FLAGS ${warnings}
 )
 
 if(ENABLE_CPPTRACE)
