--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(camera)
 add_subdirectory(camera_server)
 add_subdirectory(camera_settings)
 add_subdirectory(camera_zoom)
+add_subdirectory(component_metadata)
 add_subdirectory(disconnect)
 add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
