CI: rename LTS build to debian11

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -235,6 +235,9 @@ jobs:
     strategy:
       matrix:
         arch_name: [armv6, armv7, arm64, arm64-lts]
+        include:
+          - arch_name: arm64-lts
+            rename_distro: true
     steps:
       - uses: actions/checkout@v4
         with:
@@ -255,6 +258,11 @@ jobs:
         run: ./dockcross-linux-${{ matrix.arch_name }}-custom cmake --build build/linux-${{ matrix.arch_name }} -j2 --target install
       - name: create deb packages
         run: ./dockcross-linux-${{ matrix.arch_name }}-custom tools/create_packages.sh ./build/linux-${{ matrix.arch_name }}/install . ${{ matrix.arch_name }} libmavsdk-dev
+      - if: ${{ matrix.rename_distro }}
+        name: Rename LTS versions from debian12 to debian11
+        run: |
+          sudo apt update && sudo apt install -y rename
+          rename 's/debian12_arm64/debian11_arm64/' *.deb
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
