--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
     runs-on: ${{ matrix.ubuntu_image }}
     strategy:
       matrix:
-        ubuntu_image: [ubuntu-20.04, ubuntu-22.04]
+        ubuntu_image: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
       - uses: actions/checkout@v4
         with:
