--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,9 +161,15 @@ jobs:
       - name: test (mavsdk_server)
         run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
 
-  ubuntu20-hunter:
-    name: ubuntu-20.04 (mavsdk, hunter)
-    runs-on: ubuntu-20.04
+  ubuntu-hunter:
+    name: ${{ matrix.ubuntu_image }} (non-mavsdk_server, hunter)
+    runs-on: ${{ matrix.ubuntu_image }}
+    strategy:
+      matrix:
+        include:
+          - ubuntu_image: ubuntu-20.04
+          - ubuntu_image: ubuntu-22.04
+          - ubuntu_image: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
@@ -172,7 +178,7 @@ jobs:
         id: cache
         with:
           path: ~/.hunter
-          key: ${{ github.job }}-${{ hashFiles('~/.hunter/**') }}-2
+          key: ${{ github.job }}-${{ matrix.ubuntu_image }}-${{ hashFiles('~/.hunter/**') }}-2
       - name: install mavlink on the system
         run: |
             cmake -Bthird_party/mavlink/build -Sthird_party/mavlink
