--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(camera_settings)
 add_subdirectory(camera_zoom)
 add_subdirectory(component_metadata)
 add_subdirectory(disconnect)
+add_subdirectory(reconnect)
 add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
 add_subdirectory(fly_qgc_mission)
