--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard)
 add_subdirectory(parachute)
+add_subdirectory(params)
 add_subdirectory(set_actuator)
 add_subdirectory(sniffer)
 add_subdirectory(system_info)
