--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -46,3 +46,6 @@ add_subdirectory(transponder)
 add_subdirectory(tune)
 add_subdirectory(vtol_transition)
 add_subdirectory(winch)
+
+# Disabled, requires mavsdk_server library.
+#add_subdirectory(start_stop_server)
